== Firebug Lite 1.2 Change Log ==
2009-02-21 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1542: FBLite F12 etc should dock the popup instead of hiding the panel

2009-02-21 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js, firebug-lite.css:
      o Issue 1513 ... added:
        - Settings dialog
        - Settings storage cookie (stores settings, panel height, popup window positions etc.)
        - firebug.env:
            openInPopup
            popupTop
            popupLeft
            popupWidth
            popupHeight
      o Various popup window bugfixes and performance improvements

2009-02-21 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js, firebug-lite.css, firebug_logo.png: Issue 1503: FBLite should have a visible sign it is running when starting hidden.
                                                                     Added FBLite icon when hidden and firebug.env.showIconWhenHidden (default true).

2009-02-18 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Fixed issue 1086 - FBLite can now be used locally over HTTPS if firebug.env.css is set.
  
2009-02-17 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Fixed problem with issue 1481 - A DIV was created instead of an IFRAME so the shield was ineffective.
  
2009-02-14 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1487 - Added firebug.env.liteFilename ... this allows for the renaming of the FBLite script for use in popup windows.

2009-02-12 Azer Koculu <azer@kodfabrik.com>
  * minifier.py, jsmin.py, minify: Added minifier library and compressing scripts.

2009-02-12 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Corrected 2 syntax errors

2009-02-11 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1400 - firebug.env.override is now false by default ... I have also added