@@ -1,6 +1,9 @@
 == Firebug Lite 1.2 Change Log ==
+2009-03-03 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
+  * firebug-lite.js, firebug-lite.css, progress.gif: Fixed Issue 1544: Lite settings menu should have a "processing" gif
+
 2009-02-21 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
-  * firebug-lite.js: Issue 1542: FBLite F12 etc should dock the popup instead of hiding the panel
+  * firebug-lite.js: Fixed Issue 1542: FBLite F12 etc should dock the popup instead of hiding the panel
 
 2009-02-21 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js, firebug-lite.css:
